# apitrace

./: CMakeLists.txt
frametrim/: CMakeLists.txt  frametrim.markdown  frametrim.py  ft_bufferstate.cpp  ft_bufferstate.hpp  ft_common.hpp  ft_dependecyobject.cpp  ft_dependecyobject.hpp  ft_displaylists.hpp  ft_framebuffer.cpp  ft_framebuffer.hpp  ft_framebufferstate.cpp  ft_framebufferstate.hpp  ft_frametrimmer.cpp  ft_frametrimmer.hpp  ft_genobjectstate.cpp  ft_genobjectstate.hpp  ft_globalstate.cpp  ft_globalstate.hpp  ft_main.cpp  ft_matrixstate.cpp  ft_matrixstate.hpp  ft_objectstate.cpp  ft_objectstate.h  ft_objectstate.hpp  ft_objectwithbindstate.cpp  ft_objectwithbindstate.hpp  ft_programstate.cpp  ft_programstate.hpp  ft_renderbuffer.cpp  ft_renderbuffer.hpp  ft_samplerstate.cpp  ft_samplerstate.hpp  ft_state.cpp  ft_state.h  ft_state.hpp  ft_syncobject.cpp  ft_syncobject.hpp  ft_texturestate.cpp  ft_texturestate.hpp  (+44 more)
frametrim/tests/: CMakeLists.txt  basic_shading.test_trace  compare-trace.sh  compare-trace_reverse.sh  fbo-render.test_trace  red_triangle.test_trace  shadowmaps.test_trace
frametrim2/: CMakeLists.txt  ft_bufferstate.cpp  ft_bufferstate.hpp  ft_displaylists.cpp  ft_framebuffer.cpp  ft_framebuffer.hpp  ft_frametrimmer.cpp  ft_frametrimmer.hpp  ft_genobjectstate.cpp  ft_genobjectstate.hpp  ft_main.cpp  ft_matrixstate.cpp  ft_matrixstate.hpp  ft_objectstate.cpp  ft_objectstate.hpp  ft_objectwithbindstate.cpp  ft_objectwithbindstate.hpp  ft_programstate.cpp  ft_programstate.hpp  ft_renderbuffer.cpp  ft_renderbuffer.hpp  ft_samplerstate.cpp  ft_samplerstate.hpp  ft_texturestate.cpp  ft_texturestate.hpp  ft_tracecall.cpp  ft_tracecall.hpp  ft_vertexarray.hpp
frametrim2/tests/: 2dfonts.test_trace  CMakeLists.txt  compare-trace.sh  glxgears.test_trace  render_to_texture.test_trace  rotations.test_trace  textured_cube.test_trace  transparency.test_trace
lib/trace/: trace_callset.hpp
